syntax = "proto3";
package turbo;

message MaintainReq{
    // provides all kind of secrets for accessing data from source
    // please deploy this service with TLS, for not transfering in plain text.
    map<string, bytes> secrets = 1;
    repeated PreLoadTask tasks = 2;
}

message PreLoadTask{
    uint64 stack_id = 1;
    // stack_size is sum of data_size, index_size and meta_size
    uint64 stack_size = 2;
    // source_path is all kind of source that this dataset placed.
    repeated string source_path = 3;
}

message PreLoadTaskStatus {
    uint64 stack_id = 1;
    uint64 stack_size = 2;
    uint64 loaded_size = 3;
    string last_err = 4;
}

message MaintainResp {
    repeated PreLoadTaskStatus tasks_status = 1;
}

service Turbo{
    rpc Maintain(MaintainReq) returns (MaintainResp);
}
